--- a/web-app/css/species.css
+++ b/web-app/css/species.css
@@ -22,3 +22,70 @@ section#classification dd img {
 section#classification dl.childClassification dt,section#classification dl.childClassification dd {
     float:none;
 }
+
+.conservationList {
+    list-style-type: none;
+    -webkit-padding-start: 1em;
+    -moz-padding-start: 1em;
+    padding-start: 1em;
+}
+
+span.iucn {
+    height: 40px;
+    width: 40px;
+    margin: 0 6px 12px 0;
+    display: inline-block;
+    font-weight: bold;
+    line-height: 40px;
+    color: #333a3f;
+    text-align: center;
+    -moz-border-radius: 2em;
+    -webkit-border-radius: 2em;
+    border-radius: 2em;
+    font-variant: small-caps;
+    border: 1px solid #3d464c;
+    background-color: #fff;
+
+}
+
+span.iucn.green {
+    background-color:#005454;
+    border-color:#005454;
+    color:#fff;
+}
+
+span.iucn.near-threatened {
+    background-color:#005454;
+    border-color:#005454;
+    color:#84c684;
+}
+
+span.iucn.yellow {
+    background-color: #c90;
+    border-color: #c90;
+    color:#ffc;
+}
+
+span.iucn.orange {
+    background-color: #c63;
+    border-color: #c63;
+    color: #fc9;
+}
+
+span.iucn.red {
+    background-color: #c33;
+    border-color: #c33;
+    color:#fcc;
+}
+
+span.iucn.black {
+    background-color: black;
+    border-color: black;
+    color: white;
+}
+
+span.iucn.extinct {
+    background-color: black;
+    border-color: black;
+    color: #c33;
+}
