--- a/web-app/css/species.css
+++ b/web-app/css/species.css
@@ -141,3 +141,15 @@ span.iucn.extinct {
     display: inline-block;
     padding-right: 20px;
 }
+
+#imageDialog.modal{
+    min-height:80%;
+    margin: auto auto auto auto; /* place center */
+}
+#imageDialog .modal-dialog {
+    width: 90%;
+}
+
+#imageDialog .modal-body{overflow-y: hidden;position:static;top:50px;bottom:50px;right:0px;left:0px;}
+
+#imageDialog .modal-footer {position: absolute;bottom: 0;right: 0;left: 0;}
