#profile-hub-363 - Embed main audio and video in indigenous tab.

--- a/web-app/css/species.css
+++ b/web-app/css/species.css
@@ -140,4 +140,6 @@ span.iucn.extinct {
 .profile-name {
     display: inline-block;
     padding-right: 20px;
+/* Default Bootstrap H3 font-weight: 500 will break profile-name on Chrome */
+    font-weight: bold;
 }
