Ensure search results don't land on top of one-another. Consistent border colour on species page tab content.

--- a/grails-app/assets/stylesheets/atlas.css
+++ b/grails-app/assets/stylesheets/atlas.css
@@ -5,7 +5,7 @@
 h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {margin-top: 0;}
 
 /* Tabs */
-.tab-content {border: 1px solid #ddd; border-top: 0;}
+.tab-content {border: 1px solid #999; border-top: 0;}
 .tab-pane {padding: 20px;}
 
 /* Panels */
