--- a/grails-app/assets/stylesheets/charts.css
+++ b/grails-app/assets/stylesheets/charts.css
@@ -1,5 +1,5 @@
 /*
 *= require ALAChart.css
-*= require bootstrapToggle.css
-*= require bootstrapMultiselect.css
+*= require bootstrap-toggle.min.css
+*= require bootstrap-multiselect.min.css
 */
