--- a/grails-app/assets/stylesheets/atlas.css
+++ b/grails-app/assets/stylesheets/atlas.css
@@ -199,3 +199,6 @@ html, body {height:100%;}
 
 #recordBreakdowns {
 	min-height: 900px;}
+
+/* Fixes tab border issue */
+.tab-pane { overflow: hidden; }
