--- a/grails-app/assets/stylesheets/atlas.css
+++ b/grails-app/assets/stylesheets/atlas.css
@@ -1,13 +1,13 @@
 /* Page */
 .main-content {margin-bottom: 80px;}
 
-#main-content.panel-body {padding-left:0px; padding-right:0px; }
+#main-content.panel-body {padding-left:0px; padding-right:0px; box-shadow: none;}
 
 /* Typography */
 h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {margin-top: 0;}
 
 /* Tabs */
-.tab-content {border: 1px solid #999; border-top: 0; border-bottom:0; }
+.tab-content {border: 1px solid #ddd; border-top: 0; }
 .tab-pane {padding: 20px;}
 
 /* Panels */
