Get literature data from the BHL Pull data from BHL via the BIE Include citation formatting Fix synonym taxonRemarks bug in show.gsp

--- a/grails-app/assets/stylesheets/species.css
+++ b/grails-app/assets/stylesheets/species.css
@@ -177,3 +177,8 @@ h5.json > a {
 .specieslist-table td:first-child {
     font-weight: bold;
 }
+
+.bhl-thumbnail {
+    max-width: 128px;
+    max-height: 120px;
+}
