IEK support to species pages. Language names appear in header Language names appear in private section Links to language definitions Configrable. This doesn't have to be about IEK specifically, you call pull out sections of common names for this treatment.

--- a/grails-app/assets/stylesheets/atlas.css
+++ b/grails-app/assets/stylesheets/atlas.css
@@ -158,6 +158,9 @@ html, body {height:100%;}
 .annotation-taxonomic-status { }
 .annotation-temporal { }
 
+.in-marker { font-weight: lighter; }
+.language-name { }
+
 /* Tags (intended for labels) */
 .tag { display: inline; color: #202020; background: #F0F0F0; font-size: smaller; padding: 2px 1ex; border: thin solid #202020; border-radius: 5px; }
 .tag-tk-f { }
