--- a/grails-app/assets/stylesheets/atlas.css
+++ b/grails-app/assets/stylesheets/atlas.css
@@ -209,3 +209,7 @@ html, body {height:100%;}
 
 /* Fixes tab border issue */
 .tab-pane { overflow: hidden; }
+
+.margin-bottom-30 {
+	margin-bottom: 30px;
+}
